--- a/Bootstrap/Cap02/04-classes-para-linhas.html
+++ b/Bootstrap/Cap02/04-classes-para-linhas.html
@@ -16,15 +16,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row row-cols-sm-2 g-4">
             <div class="col">
-                coluna
-            </div>
-            <div class="col-md-8">
-                coluna
+                <div> Card 1 </div>
             </div>
             <div class="col">
-                coluna
+                <div> Card 2 </div>
             </div>
         </div>
     </div>
