--- a/Bootstrap/Cap02/05-aninhamento-de-linhas.html
+++ b/Bootstrap/Cap02/05-aninhamento-de-linhas.html
@@ -17,14 +17,19 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
-                coluna
+            <div class="col-3">
+                3 colunas
             </div>
-            <div class="col-md-8">
-                coluna
-            </div>
-            <div class="col">
-                coluna
+            <div class="col-9">
+                9 colunas
+                <div class="row">
+                    <div class="col-4">
+                        4 colunas
+                    </div>
+                    <div class="col-8">
+                        8 colunas
+                    </div>
+                </div>    
             </div>
         </div>
     </div>
