--- a/Bootstrap/Cap02/06-classes-para-o-container-do-grid.html
+++ b/Bootstrap/Cap02/06-classes-para-o-container-do-grid.html
@@ -15,17 +15,33 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col">
-                coluna
-            </div>
-            <div class="col-md-8">
-                coluna
+                col 1
             </div>
             <div class="col">
-                coluna
+                coluna 2
             </div>
+            <div class="col">
+                coluna 3
+            </div>
+            <div class="col">
+                coluna 4
+            </div>
+            <div class="col">
+                coluna 5
+            </div>
+            <div class="col">
+                coluna 6
+            </div>
+            <div class="col">
+                coluna 7
+            </div>
+            <div class="col">
+                coluna 8
+            </div>
+
         </div>
     </div>
 </body>
