--- a/Bootstrap/Cap02/07-alinhamento-vertical-das-linhas-do-grid.html
+++ b/Bootstrap/Cap02/07-alinhamento-vertical-das-linhas-do-grid.html
@@ -16,15 +16,26 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row align-items-start">
             <div class="col">
-                coluna
+                coluna 1
             </div>
-            <div class="col-md-8">
-                coluna
-            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row align-items-center">
             <div class="col">
-                coluna
+                coluna 1
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row align-items-end">
+            <div class="col">
+                coluna 1
             </div>
         </div>
     </div>
