--- a/Bootstrap/Cap02/exercicio-proposto-4.html
+++ b/Bootstrap/Cap02/exercicio-proposto-4.html
@@ -17,14 +17,14 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">
-                coluna
+            <div class="col-md-2">
+                Uma coluna
             </div>
-            <div class="col-md-8">
-                coluna
+            <div class="col-md-auto">
+                lorem
             </div>
-            <div class="col">
-                coluna
+            <div class="col-md-2">
+                uma coluna
             </div>
         </div>
     </div>
