--- a/Bootstrap/Cap02/exercicio-proposto-5.html
+++ b/Bootstrap/Cap02/exercicio-proposto-5.html
@@ -16,15 +16,30 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col">
-                coluna
-            </div>
-            <div class="col-md-8">
-                coluna
+        <div class="row row-cols-6 row-cols-sm-3 row-cols-lg-6">
+            <div class="col-sm-2">
+                Card 1
             </div>
             <div class="col">
-                coluna
+                Card 2
+            </div>
+            <div class="col">
+                Card 3
+            </div>
+            <div class="col">
+                Card 4
+            </div>
+            <div class="col">
+                Card 5
+            </div>
+            <div class="col">
+                Card 6
+            </div>
+            <div class="col">
+                Card 7
+            </div>
+            <div class="col">
+                Card 8
             </div>
         </div>
     </div>
