--- a/Bootstrap/Cap02/exercicio-proposto-7.html
+++ b/Bootstrap/Cap02/exercicio-proposto-7.html
@@ -11,31 +11,15 @@
         crossorigin="anonymous"
     >
     <style rel="stylesheet">
-        [class ^= col] {border: 1px solid red}
+        [class ^= col] {border: 3px solid red;}
+        [class ^= row] {border: 1px solid blue;}
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="row align-items-start">
-            <div class="col">
-                coluna 1
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col">
-                coluna 1
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col">
-                coluna 1
+        <div class="row">
+            <div class="col-2 offset-5">
+                offset-2
             </div>
         </div>
     </div>
